# thoughtful-hw

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/package_sorter/: __init__.py  api.py  sorting.py
src/package_sorter/static/: sort.js
src/package_sorter/templates/: index.html
tests/: test_api.py  test_sorting.py
