[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "package-sorter"
version = "0.1.0"
description = "Python solution for the Smarter Technology package sorting task."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Eli Stark" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.12.0",
  "ty>=0.0.1a14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/package_sorter"]

[tool.pytest.ini_options]
addopts = [
  "--cov=package_sorter",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
  "--no-cov-on-fail",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["src", "tests"]
